# julia-2d-heat-equation

./: .gitignore  CMakeLists.txt  Manifest.toml  Project.toml  README.md  benchmark.sh  benchmark_results.yaml  benchmark_results_m2.yaml  clean.sh  config.yaml  config_benchmark.yaml  config_test.yaml  install.sh  load.ipynb  measure_complexity.sh  plot_benchmarks.ipynb  plot_benchmarks_barcharts.ipynb  plot_complexity.ipynb  plotting_daniel.ipynb  run_benchmarks.jl  test.jl  test.py  test.sh
benchmark_configs/: 100.yaml  12800.yaml  1600.yaml  200.yaml  3200.yaml  400.yaml  6400.yaml  800.yaml
implementations/: utility.hpp
implementations/cpp_cuda_stencil/: discretize_pde.cu  install.sh  kernels.cu  main  main.cu
implementations/cpp_naive/: CMakeLists.txt  Makefile  benchmark.cpp  benchmark.jl  benchmark.sh  discretize_pde.hpp  install.sh  main  main.cpp  naive.cpp  run.sh  utility.hpp  write_txt.hpp  write_vtk.hpp
implementations/cuda_cpp/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Manifest.toml  Project.toml  benchmark.jl  benchmark.sh  build.sh  cmake_install.cmake  convert_output.jl  cuda_heat.cu  discretize_pde.hpp  heatcu  main  main.cu  run.jl  run.sh
implementations/julia_cuda/: Project.toml  benchmark.sh  discretize_pde.jl  run.sh
implementations/julia_cuda_array/: Manifest.toml  benchmark.jl  discretize_pde.jl
implementations/julia_cuda_stencil/: Manifest.toml  Project.toml  benchmark.jl  discretize_pde.jl  main.jl
implementations/julia_metal_array/: Manifest.toml  Project.toml  benchmark.jl  discretize_pde.jl
implementations/julia_metal_kernel/: Manifest.toml  Project.toml  benchmark.jl  discretize_pde.jl  run.sh
implementations/julia_metal_stencil/: Manifest.toml  discretize_pde.jl  install.sh  main.jl
implementations/julia_parallel_stencil/: Manifest.toml  benchmark.jl  benchmark.sh  discretize_pde.jl  run.sh
implementations/julia_sequential_array/: Manifest.toml  Project.toml  benchmark.jl  discretize_pde.jl
implementations/julia_sequential_stencil/: Manifest.toml  benchmark.jl  discretize_pde.jl  main.jl  run.sh
implementations/numpy/: benchmark.sh  discretize_pde.py  main.py  requirements.txt
implementations/numpy_array/: benchmark.py  discretize_pde.py
implementations/python/: playground.ipynb  problem.py
implementations/python_lists/: benchmark.py  discretize_pde.py  main.py
implementations/pytorch_array/: benchmark.py  discretize_pde.py  main.py
implementations/pytorch_conv/: benchmark.py  discretize_pde.py  requirements.txt  run.sh
